# JCVD4.0

./: ACV_23_Part2.ipynb  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: publish_to_testpypi.yml
.ipynb_checkpoints/: ACV_23_Part2-checkpoint.ipynb
dataset/: cls.txt  fitness_poses_csvs_out.csv
dataset/fitness_poses_csvs_out/: pushups_down.csv  pushups_up.csv
dataset/test/: Untitled.ipynb  ice_screenshot_20211023-011514_png.rf.9a36228c6a2cafdf603b655469b5f6d7.txt  ice_screenshot_20211023-011529_png.rf.d3bf9c77072436a9e7c0e82b4aa4be63.txt  ice_screenshot_20211023-011607_png.rf.45a3752c267df64e62721b2be5070986.txt  ice_screenshot_20211023-011646_png.rf.aff6f2e5b1f31bab29100c426e0921ba.txt  ice_screenshot_20211023-011718_png.rf.89346b8d8ef41731af3eed4feda30e93.txt  ice_screenshot_20211023-012011_png.rf.a89dda0f619c5b8d8de1f418458e59b2.txt  ice_screenshot_20211023-012120_png.rf.14b6f0af312ca6dcb617d551de5992b8.txt  ice_screenshot_20211023-012244_png.rf.2d473de126c3f2da8266b10c225b1f5c.txt  ice_screenshot_20211023-012436_png.rf.b0ade78c274aa4877453edb8b7516672.txt  ice_screenshot_20211023-012600_png.rf.a507e8f74c00579f1a643753e924f4d7.txt  ice_screenshot_20211023-012642_png.rf.02b989a2e18992db5073f46287cfbf03.txt  ice_screenshot_20211023-012646_png.rf.9e782bc95af50b0ec7937cd07f1a9528.txt  ice_screenshot_20211023-012801_png.rf.0363239345da6a281cda1c13c426aa9f.txt  ice_screenshot_20211023-012803_png.rf.e83494685950794be4c3e163d112d23e.txt  (+189 more)
essai_wheel/: pyproject.toml
tests/: test_essai_wheel.py
(+509 files in other folders)
