[tool.poetry]
name = "essai_wheel"
version = "0.1.0"
description = ""
authors = ["virginiedesharnais <virginie.boniface@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.4.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0"
tqdm = "^4.65.0"
requests = "^2.28.2"
mediapipe = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
